--- a/328pb/blink/Makefile
+++ b/328pb/blink/Makefile
@@ -2,6 +2,8 @@ build:
 	avr-gcc -Os -DF_CPU=16000000UL -mmcu=atmega328pb -c -o blink.o blink.c
 	avr-gcc -o blink.bin blink.o
 	avr-objcopy -O ihex -R .eeprom blink.bin blink.hex
+
+flash:
 	sudo avrdude -F -V -c xplainedmini -p m328pb -b 115200 -U flash:w:blink.hex
 
 show:  
